--- a/dept/dashboard/static/dashboard/style.css
+++ b/dept/dashboard/static/dashboard/style.css
@@ -1,9 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+*{
+    margin: 0px;
+    padding: 0px;
+}
 
 body{
     font-family: "Poppins", sans-serif;
 }
+
+.header{
+    margin-top: 50px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form{
+    
+    display: grid;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 30px;
+    gap: 10px;
+    width: 300px;
+    height: 400px;
+    border: #101010 1px solid;
+    border-radius: 30px;
+}
+input{
+    all: unset;
+    margin: 0px;
+    border: #101010 1px solid;
+    border-radius: 30px;
+    padding: 10px;
+}
+button{
+    all: unset;
+    background-color: #101010;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 30px;
+    cursor: pointer;
+    border: #101010 1px solid;
+    font-weight: 500;
+    text-align: center;
+}
+button:hover{
+    background-color: white;
+    color: #101010;
+    border: #101010 1px solid;
+    
+    transition: 0.2s ease-in;
+}
 .container {
+    margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     row-gap: 20px;
