--- a/dept/dashboard/templates/dashboard/index.html
+++ b/dept/dashboard/templates/dashboard/index.html
@@ -24,10 +24,10 @@
                     <h2>{{ dep.dept_code }}</h2>
                 </div>
                 <div class="card-content">
-                    <p>ID: {{ dep.dept_id }}</p>
-                    <p>Name: {{ dep.dept_name }}</p>
+                    <p><strong>ID:</strong> {{ dep.dept_id }}</p>
+                    <p><strong>Name:</strong> {{ dep.dept_name }}</p>
                     
-                    <p>HOD: {{ dep.dept_head }}</p>
+                    <p><strong>HOD:</strong> {{ dep.dept_head }}</p>
                 </div>
             </div>
             {% endfor %}
