--- a/dept/dashboard/static/dashboard/style.css
+++ b/dept/dashboard/static/dashboard/style.css
@@ -2,10 +2,17 @@
 *{
     margin: 0px;
     padding: 0px;
+    
 }
 
 body{
     font-family: "Poppins", sans-serif;
+}
+.whole-container{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 30px;
 }
 
 .header{
@@ -58,6 +65,10 @@ button:hover{
     transition: 0.2s ease-in;
 }
 .container {
+    width: 100%;
+    height: 80vh;
+    overflow-y: scroll;
+    padding: 20px;
     margin-top: 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
