--- a/dept/dashboard/templates/dashboard/index.html
+++ b/dept/dashboard/templates/dashboard/index.html
@@ -2,7 +2,8 @@
 <html>
     <link rel="stylesheet" href="{% static 'dashboard/style.css' %}">
     <body>
-        <div class="header">
+        <div class="whole-container">
+            <div class="header">
             <h1>Dashboard</h1>
             <p>Welcome to the dashboard!</p>
             <form class="form" method="POST">
@@ -13,27 +14,30 @@
                 <input type="text" name="dept_head" placeholder="Department Head" required>
                 <button type="submit">Create Department</button>
                 </form>
+            </div>
+            <div class="container">
+            {% if depts %}
+                {% for dep in depts %}
+                <div class="card" onclick="location.href='{% url 'edit' dep.dept_id %}'">
+                    <div class="dept-head">
+                        <h2>{{ dep.dept_code }}</h2>
+                    </div>
+                    <div class="card-content">
+                        <p><strong>ID:</strong> {{ dep.dept_id }}</p>
+                        <p><strong>Name:</strong> {{ dep.dept_name }}</p>
+                        
+                        <p><strong>HOD:</strong> {{ dep.dept_head }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+                {% else %}
+
+                    <div class="card">No departments found.</div>
+                {% endif %}
+            </div>
+            
+           
         </div>
         
-        {% if depts %}
-        <div class="container">
-
-            {% for dep in depts %}
-            <div class="card" onclick="location.href='{% url 'edit' dep.dept_id %}'">
-                <div class="dept-head">
-                    <h2>{{ dep.dept_code }}</h2>
-                </div>
-                <div class="card-content">
-                    <p><strong>ID:</strong> {{ dep.dept_id }}</p>
-                    <p><strong>Name:</strong> {{ dep.dept_name }}</p>
-                    
-                    <p><strong>HOD:</strong> {{ dep.dept_head }}</p>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        {% else %}
-            <p>No departments found.</p>
-        {% endif %}
     </body>
 </html>
